networkpolicy/networkpolicy__basic_kafka_setup__grafana__all__grafana__egress__ports__grafana__nr49__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana--all--grafana--egress--ports--grafana--nr49
  namespace: grafana
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: grafana
